# audio-server

./: .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: main.py
app/api/: auth.py  views.py
app/clients/: audio.py  constants.py
app/common/: constants.py  utils.py
app/config/: logging.py  settings.py
app/tests/: test_main.py
