[tool.poetry]
name = "audio-server"
version = "0.1.0"
description = "Adjusting the volume of audio files in decibels Full Scale (dBFS)"
authors = ["baby-platom <platon200502@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydub = "^0.25.1"
python-multipart = "^0.0.6"
pydantic-settings = "^2.1.0"
structlog = "^23.2.0"
pytest = "^7.4.3"
httpx = "^0.25.2"
trio = "^0.23.1"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
